--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240222.0",
+    "prisma": "^5.10.2",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
   }
